smoll changes requirements + gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ datasets/raw/*
 
 # I could have added it to the gitignore... But I'm way too hilarious for that
 #hazard_zone_(test)/*
+software/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
